Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-12713

Spectrum Analyzer demo does not link when building statically

    XMLWordPrintable

Details

    • 32a54a21

    Description

      When building -static on Windows, the Spectrum Analyzer demo fails to link.

      spectrumanalyser.obj : error LNK2019: unresolved external symbol "_declspec(dllimport) public: __thiscall FFTRealWrapper::FFTRealWrapper(void)" (imp??0FFTRealWrapper@@QAE@XZ) referenced in function "public: __thiscall SpectrumAnalyserThread::SpectrumAnalyserThread(class QObject *)" (??0SpectrumAnalyserThread@@QAE@PAVQObject@@@Z)

      spectrumanalyser.obj : error LNK2019: unresolved external symbol "_declspec(dllimport) public: __thiscall FFTRealWrapper::~FFTRealWrapper(void)" (imp1FFTRealWrapper@@QAE@XZ) referenced in function "public: void * __thiscall FFTRealWrapper::`scalar deleting destructor'(unsigned int)" (_GFFTRealWrapper@@QAEPAXI@Z)

      spectrumanalyser.obj : error LNK2019: unresolved external symbol "_declspec(dllimport) public: void __thiscall FFTRealWrapper::calculateFFT(float * const,float const * const)" (imp?calculateFFT@FFTRealWrapper@@QAEXQAMQBM@Z) referenced in function "public: void __thiscall SpectrumAnalyserThread::calculateSpectrum(class QByteArray const &,int,int)" (?calculateSpectrum@SpectrumAnalyserThread@@QAEXABVQByteArray@@HH@Z)

      ..\spectrum.exe : fatal error LNK1120: 3 unresolved externals

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            gastockw Gareth Stockwell
            bholm Benedikte Holm (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes