Do not include Spectrum Analyzer demo in static builds

This demo includes a 3rd party library which is licensed under
the LGPL.  As such, the demo application may only link to the
library dynamically.

Task-number: QTBUG-12713
Reviewed-by: Justin McPherson